syntax = "proto3";

package foo.bar;  

enum Gender {
    Unset = 0; // yes we need this kind of stuff with implicit presence fields
    Male = 1;
    Female = 2; 
}

message Person {
    message TelNumber {
        int32 area_code = 1;
        int32 number    = 2;
    }
    string     first_name    = 1; 
    string     last_name     = 2; 
    int32      date_of_birth = 3;
    TelNumber  tel_number    = 4;  

    oneof Employment {
        int32  self_employed = 5; // value is unused  
        string employed_by   = 6; // value is company name
    }
    enum MaritalStatus {
        Single = 0; 
        Married = 1; 
    }
    MaritalStatus marital_status = 7;
    Gender gender = 8;  
}

message Couple {
    Person p1 = 1;
    Person p2 = 2; 
    repeated Person.TelNumber contact_numbers = 3;
    uint32 number_of_children = 4;
}
